# quiltc

./: .gitignore  Cargo.toml  K8S.md  README.md  RESULTS.md  VERIFICATION.md
.fozzy/runs/: fixverify_trace.fozzy  native_snapshot_trace.fozzy
.fozzy/runs/03c9a8a0-3fee-4902-8752-c438298f3e59/: events.json  manifest.json  profile.cpu.json  profile.heap.json  profile.latency.json  profile.metrics.json  profile.timeline.json  report.json  symbols.json
.fozzy/runs/0dbe0cfe-dec1-4c11-b017-e540d1539dbb/: manifest.json  report.json
.fozzy/runs/28621360-e0bf-46e4-ad50-250ebe1159a2/: manifest.json  report.json
.fozzy/runs/6f6d16a6-abf6-4a19-9e45-28960eb17e09/: manifest.json  report.json
.fozzy/runs/7491452b-2712-4594-9ace-672859525ca9/: manifest.json  profile.cpu.json  profile.heap.json  profile.latency.json  profile.metrics.json  profile.timeline.json  report.json  symbols.json
.fozzy/runs/8b0ac477-9e73-4da8-b3ae-f97af2ec4f4f/: manifest.json  profile.cpu.json  profile.heap.json  profile.latency.json  profile.metrics.json  profile.timeline.json  report.json  symbols.json
.fozzy/runs/8d895eab-88ee-4f21-875f-b95302d24fd4/: manifest.json  report.json
.fozzy/runs/9af7016e-9007-423f-843b-8417c0170a8f/: manifest.json  report.json
.fozzy/runs/a3d3ae65-49c9-44ee-8e8e-21fa7e446a85/: manifest.json  profile.cpu.json  profile.heap.json  profile.latency.json  profile.metrics.json  profile.timeline.json  report.json  symbols.json
.fozzy/runs/a98ce830-eb33-4f37-9131-5ef92367524b/: manifest.json  report.json
.fozzy/runs/ac4f2748-3a47-49d6-b2fd-421d9767eaf4/: manifest.json  report.json
.fozzy/runs/b27b2bc0-7abe-4834-9ff8-cfea6fda372e/: manifest.json  profile.cpu.json  profile.heap.json  profile.latency.json  profile.metrics.json  profile.timeline.json  report.json  symbols.json  timeline.json
.fozzy/runs/b289774d-8713-4ae8-bfa7-9bdbe7505655/: manifest.json  report.json
.fozzy/runs/b4b22f70-dbd4-4477-98de-9fe25d25ebdc/: manifest.json  report.json
.fozzy/runs/cb5d23a6-35aa-4052-a775-42449eeea9c7/: manifest.json  report.json
.fozzy/runs/cb7281e1-4949-403a-b264-85ba02b780b3/: manifest.json  report.json
.fozzy/runs/d05eb04b-9f07-4cbe-a5ee-fea48c12d6b2/: manifest.json  report.json
.fozzy/runs/d0d33254-77f3-4582-9321-961f306a1459/: manifest.json  report.json
.fozzy/runs/da47a185-49f5-4ab9-8df1-be2bc9ac1183/: manifest.json  report.json
.fozzy/runs/dd055650-36bf-40cb-9f52-a18a9e04b79a/: manifest.json  report.json
.fozzy/runs/e3639556-e212-422f-ba0e-1b84c6fe73eb/: manifest.json  report.json
.fozzy/runs/e95237f7-822a-4f9f-be90-1eecca0b019d/: manifest.json  report.json
.fozzy/runs/eb2119c0-b07a-42b1-9430-55ad7d3fae77/: manifest.json  report.json
.fozzy/runs/ee52165d-d02e-4ca3-a02d-62669f584373/: manifest.json  report.json
.fozzy/runs/f3efd54b-d8ff-4cd1-9c7c-43add500fb92/: manifest.json  report.json
.fozzy/runs/f585330c-133d-40fb-908f-2431f20dc440/: manifest.json  report.json
agent/: Cargo.toml  build.rs
agent/proto/: quilt.proto
agent/src/: main.rs  types.rs
agent/src/control_client/: mod.rs
agent/src/overlay/: mod.rs  vxlan.rs
agent/src/quilt_client/: mod.rs
cli/: Cargo.toml
cli/src/: config.rs  error.rs  http_client.rs  main.rs  snapshot_types.rs
cli/tests/: container_async_cli.rs  snapshot_cli.rs
control/: Cargo.toml
control/migrations/: 001_nodes.sql  002_containers.sql  003_orchestrator.sql
control/src/: main.rs  quilt_http.rs  tls.rs  types.rs
control/src/api/: containers.rs  mod.rs  nodes.rs  orchestrator.rs
control/src/db/: mod.rs
control/src/services/: container_registry.rs  heartbeat_monitor.rs  ipam.rs  mod.rs  node_registry.rs  orchestrator.rs  scheduler.rs
docs/: HA_DESIGN.md  IMPLEMENTATION_SUMMARY.md  QUILT_INTEGRATION.md  QUILT_INTEGRATION_CHECKLIST.md  QUILT_RPCS_NEEDED.md  RUNTIME_IMPLEMENTATION.md
integration-tests/: Cargo.toml
integration-tests/src/: lib.rs
integration-tests/tests/: concurrent_registration.rs  control_restart.rs  graceful_shutdown.rs  main.rs  node_lifecycle.rs  peer_discovery.rs
integration-tests/tests/common/: mod.rs
proto/: quilt.proto
runtime/: Cargo.toml
runtime/src/: ipam.rs  main.rs  route_manager.rs  service.rs
tools/gen-certs/: Cargo.toml
tools/gen-certs/src/: main.rs
