[workspace]
resolver = "2"
members = ["control", "agent", "runtime", "cli", "tools/gen-certs", "integration-tests"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.47", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Unique IDs
uuid = { version = "1.11", features = ["v4", "serde"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# TLS
rustls = "0.23"
rustls-pemfile = "2.1"
tokio-rustls = "0.26"

# Time handling
time = { version = "0.3", features = ["serde", "formatting", "macros"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1

[profile.dev]
opt-level = 0
debug = true
