[package]
name = "quilt-mesh-control"
version = "0.1.0"
edition = "2021"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
time = { workspace = true }

# HTTP framework
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }

# Database
rusqlite = { version = "0.32", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.25"

# TLS
axum-server = { version = "0.7", features = ["tls-rustls"] }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }

# CLI
clap = { version = "4.5", features = ["derive"] }

# Crypto (SHA-256 for token hashing)
sha2 = "0.10"
hex = "0.4"

# System utilities
dirs = "5.0"

[[bin]]
name = "quilt-mesh-control"
path = "src/main.rs"
