[package]
name = "quilt-mesh-integration-tests"
version = "0.1.0"
edition = "2021"
autotests = false

# Single integration test binary that includes all test modules
[[test]]
name = "integration"
path = "tests/main.rs"

[dev-dependencies]
tokio = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
futures = { workspace = true }
tempfile = "3.10"
libc = "0.2"
