[package]
name = "quilt-runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# gRPC
tonic = { version = "0.12", features = ["tls"] }
prost = "0.13"

# Networking
ipnet = "2.10"

# CLI
clap = { version = "4.5", features = ["derive"] }

[target.'cfg(target_os = "linux")'.dependencies]
rtnetlink = "0.14"
futures = "0.3"

[build-dependencies]
tonic-build = "0.12"

[features]
dev-stubs = []

[[bin]]
name = "quilt-runtime"
path = "src/main.rs"
